<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.siamsot.musicplayer.Library">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_new_description"
        android:id="@+id/new_discr"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_discr"
        android:id="@+id/albums">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name"
                android:id="@+id/alb1"
                style="@style/Album"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track1"
                style="@style/Album"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name"
                android:id="@+id/alb2"
                style="@style/Album"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track2"
                style="@style/Album"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name"
                style="@style/Album"
                android:id="@+id/alb3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track3"
                style="@style/Album"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_below="@id/albums"
        android:id="@+id/back"
        />
</RelativeLayout>