<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.siamsot.musicplayer.Library">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/library_description"
    android:id="@+id/lib_discr"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lib_discr"
        android:id="@+id/images">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alb1"
                style="@style/Album"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name" />

            <TextView
                style="@style/Album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alb2"
                style="@style/Album"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name" />

            <TextView
                style="@style/Album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alb3"
                style="@style/Album"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name" />

            <TextView
                style="@style/Album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track3" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_below="@id/images"
        android:id="@+id/back"
    />
</RelativeLayout>
